Fix alignment on chromosome art while animating, also hide extra chromosome labels. [#153563840]

--- a/src/stylus/challenges.styl
+++ b/src/stylus/challenges.styl
@@ -722,4 +722,8 @@ body
 
 .animated-component-container{
   position:fixed;
+  // fix allele lines not appearing in correct location while animated
+  .stripe {
+    margin-top:-19px;
+  }
 }
