--- a/src/stylus/fablevision/fv-chromosome.styl
+++ b/src/stylus/fablevision/fv-chromosome.styl
@@ -56,3 +56,12 @@
     top: 48px
   &.label-2
     top: 48px
+
+.chromosome-allele-container
+  .empty
+    .chromosome-label
+      display:none
+
+.gamete-chromosomes
+  .chromosome-label
+    display:none
